--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,5 @@
 {
-  "name": "sendgrid-php-example",
-  "description": "Example of using the SendGrid php library.",
-  "version": "0.0.1",
-  "homepage": "http://github.com/scottmotte/sendgrid-php-example",
-  "license": "MIT",
-  "keywords": ["SendGrid", "sendgrid", "email", "send", "grid", "php"],
-  "require": {
-    "sendgrid/sendgrid": "2.1.1",
-    "sendgrid/smtpapi": "0.0.1",
-    "vlucas/phpdotenv": "1.0.*",
-    "swiftmailer/swiftmailer": "v5.0.3"
-  }
+    "require": {
+        "sendgrid/sendgrid": "~5.1"
+    }
 }
